objects/IND_Fiscal_Date_Information__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used in fiscal date formula calculations on the opportunity forecast object.</description>
    <fields>
        <fullName>Current_Fiscal_Quarter_1__c</fullName>
        <inlineHelpText>Please Enter the End date of Fiscal Quarter.</inlineHelpText>
        <label>Current Fiscal Quarter 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Fiscal_Quarter_2__c</fullName>
        <inlineHelpText>Please Enter the End date of Fiscal Quarter.</inlineHelpText>
        <label>Current Fiscal Quarter 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Fiscal_Quarter_3__c</fullName>
        <inlineHelpText>Please Enter the End date of Fiscal Quarter.</inlineHelpText>
        <label>Current Fiscal Quarter 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Date_of_fiscal_year__c</fullName>
        <label>First Date of fiscal year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <description>Enter the current Fiscal year</description>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_date_of_fiscal_year__c</fullName>
        <label>Last date of fiscal year</label>
        <type>Date</type>
    </fields>
    <label>IND Fiscal Date Information</label>
</CustomObject>